[project]
name = "generative-ai-with-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.13",
    "langchain-anthropic>=0.3.1",
    "langchain-chroma>=0.1.4",
    "langchain-cli>=0.0.35",
    "langchain-cohere>=0.3.4",
    "langchain-core>=0.3.28",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.0.7",
    "langchain-google-vertexai>=2.0.9",
    "langchain-openai>=0.2.14",
    "langchainhub>=0.1.21",
    "accelerate>=1.2.1",
    "apify-client>=1.8.1",
    "arxiv>=2.1.3",
    "duckduckgo-search>=7.0.2",
    "faiss-cpu>=1.9.0.post1",
    "google-api-python-client>=2.156.0",
    "google-cloud-aiplatform>=1.75.0",
    "google-generativeai>=0.8.3",
    "gpt4all>=2.8.2",
    "gradio>=4.26.0",
    "huggingface-hub>=0.27.0",
    "jupyter>=1.1.1",
    "lanarky>=0.7.16",
    "langserve>=0.3.0",
    "numexpr>=2.10.2",
    "opencv-python>=4.10.0.84",
    "pandoc>=2.4",
    "pdf2image>=1.17.0",
    "pdfminer-six>=20240706",
    "pikepdf>=9.4.2",
    "pillow-heif>=0.21.0",
    "pymupdf>=1.25.1",
    "pypdf>=5.1.0",
    "replicate>=1.0.4",
    "ruff>=0.8.4",
    "sentence-transformers>=3.3.1",
    "streamlit>=1.41.1",
    "tiktoken>=0.8.0",
    "unstructured>=0.16.11",
    "wikipedia>=1.4.0",
    "wolframalpha>=5.1.3",
    "torch>=2.5.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]
